# test-harness

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/bridle/: __init__.py  __main__.py  _console.py  _harness.py  _monitor.py  _plugin.py  _runner.py
src/bridle/backends/: __init__.py  _base.py  _buildkite.py  _mslci.py  _run_env.py  _stub.py
src/test_harness/: __init__.py  _console.py  _harness.py  _monitor.py  _plugin.py  _runner.py  _schema.py
src/test_harness/backends/: _base.py  _stub.py
tests/: conftest.py  test_backends.py  test_harness_integration.py  test_monitor.py  test_plugin.py  test_schema.py
tests/__snapshots__/: test_schema.ambr
