[project]
name = "test-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Suo", email = "suo@meta.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "pytest>=8.0",
    "rich>=13.0",
]

[project.scripts]
test-harness = "test_harness:main"

[dependency-groups]
dev = [
    "syrupy>=4.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
